.provarCaches/00D410000011HE0EAM/objects/rstkf__apoffsettxn__c.object
<CustomObject>
    <description>apoffsettxn__c</description>
    <fields>
        <fullName>rstkf__apoffsettxn_apbalance__c</fullName>
        <description>Payable Balance</description>
        <label>Payable Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apoffsettxn_apcutoffdate__c</fullName>
        <description>Offset Cutoff Date for AP</description>
        <label>Offset Cutoff Date for AP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apoffsettxn_apinvtxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Offset AP Vendor Credit</description>
        <label>Offset AP Vendor Credit</label>
        <referenceTo>rstkf__apinvtxn__c</referenceTo>
        <relationshipLabel>Payment Offset Transaction Audit</relationshipLabel>
        <relationshipName>apoffsettxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apoffsettxn_appayamt__c</fullName>
        <description>AP Balance After Offset (Payment Amount)</description>
        <label>AP Balance After Offset (Payment Amount)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apoffsettxn_appayd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Offset Payment</description>
        <label>Offset Payment</label>
        <referenceTo>rstkf__appayd__c</referenceTo>
        <relationshipLabel>Payment Offset Transaction Audit</relationshipLabel>
        <relationshipName>apoffsettxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apoffsettxn_aramatdue__c</fullName>
        <description>AR Balance After Offset</description>
        <label>AR Balance After Offset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apoffsettxn_arbalance__c</fullName>
        <description>Receivable Balance</description>
        <label>Receivable Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apoffsettxn_arcutoffdate__c</fullName>
        <description>Offset Cutoff Date for AR</description>
        <label>Offset Cutoff Date for AR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apoffsettxn_arinvtxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Offset AR Credit Memo</description>
        <label>Offset AR Credit Memo</label>
        <referenceTo>rstkf__arinvtxn__c</referenceTo>
        <relationshipLabel>Payment Offset Transaction Audit</relationshipLabel>
        <relationshipName>apoffsettxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apoffsettxn_basisdate__c</fullName>
        <description>Basis Date</description>
        <label>Basis Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apoffsettxn_cmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company</description>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Payment Offset Transaction Audit</relationshipLabel>
        <relationshipName>apoffsettxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apoffsettxn_paydate__c</fullName>
        <description>Offset Payment Date</description>
        <label>Offset Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apoffsettxn_povendcmpno__c</fullName>
        <description>Vendor</description>
        <label>Vendor</label>
        <referenceTo>rstkf__povendcmpno__c</referenceTo>
        <relationshipLabel>Payment Offset Transaction Audit</relationshipLabel>
        <relationshipName>Payment_Offset_Transaction_Audit</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__apoffsettxn_preview__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Preview Transaction Only</description>
        <label>Preview Transaction Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__apoffsettxn_socustcmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Offset Customer</description>
        <label>Offset Customer</label>
        <referenceTo>rstkf__socustcmpno__c</referenceTo>
        <relationshipLabel>Payment Offset Transaction Audit</relationshipLabel>
        <relationshipName>apoffsettxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__apoffsettxn_povendcmpno__r.Name &amp; &quot;( &quot;&amp;  TEXT(rstkf__apoffsettxn_paydate__c )  &amp; &quot; )&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <description>triggeroptions</description>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Payment Offset Transaction Audit</label>
    <nameField>
        <label>Payment Offset Transaction Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Offset Transaction Audit</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>